# 22s-final-project-Michael-Castle

./: .gitignore  CMakeLists.txt  DSAvlTree.h  DSDocument.cpp  DSDocument.h  HashTable.h  Makefile  main.cpp  parsingData.cpp  parsingData.h  stemmerGiveUp.h  vectorHelper.cpp  vectorHelper.h  wordObject.cpp  wordObject.h
porter2_stemmer-master/: CMakeLists.txt  porter2_stemmer.h
porter2_stemmer-master/util/: string_view.h
